--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 			href="https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
 		<title>Vite App</title>
 	</head>
 	<body>
